<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_back"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        style="@style/display"
        tools:text="0," />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                style="@style/op_button"
                android:text="@string/clear_button_label" />

            <Button
                android:id="@+id/button_clear_error"
                style="@style/op_button"
                android:text="@string/clear_error_button_label" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/app_label_text_size" />

            <Button
                android:id="@+id/button_div"
                style="@style/op_button"
                android:text="@string/divide_button_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="@style/digit_button"
                android:text="@string/seven_button_label" />

            <Button
                android:id="@+id/button_8"
                style="@style/digit_button"
                android:text="@string/eight_button_label" />

            <Button
                android:id="@+id/button_9"
                style="@style/digit_button"
                android:text="@string/nine_button_label" />

            <Button
                android:id="@+id/button_times"
                style="@style/op_button"
                android:text="@string/times_button_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="@style/digit_button"
                android:text="@string/four_button_label" />

            <Button
                android:id="@+id/button_5"
                style="@style/digit_button"
                android:text="@string/five_button_label" />

            <Button
                android:id="@+id/button_6"
                style="@style/digit_button"
                android:text="@string/six_button_label" />

            <Button
                android:id="@+id/button_minus"
                style="@style/op_button"
                android:text="@string/minus_button_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="@style/digit_button"
                android:text="@string/one_button_label" />

            <Button
                android:id="@+id/button_2"
                style="@style/digit_button"
                android:text="@string/two_button_label" />

            <Button
                android:id="@+id/button_3"
                style="@style/digit_button"
                android:text="@string/three_button_label" />

            <Button
                android:id="@+id/button_plus"
                style="@style/op_button"
                android:text="@string/plus_button_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_change_sign"
                style="@style/digit_button"
                android:text="@string/change_sign_button_label" />

            <Button
                android:id="@+id/button_0"
                style="@style/digit_button"
                android:text="@string/zero_button_label" />

            <Button
                android:id="@+id/button_comma"
                style="@style/digit_button"
                android:text="@string/comma_button_label" />

            <Button
                android:id="@+id/button_equals"
                style="@style/op_button"
                android:backgroundTint="#40BCFE"
                android:text="@string/equal_button_label"
                android:textColor="#123547" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>